# docs/swagger.yaml
@@ -15,6 +15,21 @@ definitions:
     required:
     - description
     type: object
+  reqresp.LoginUserRequest:
+    properties:
+      login:
+        example: ulogin
+        maxLength: 50
+        minLength: 4
+        type: string
+      password:
+        example: "12345678"
+        minLength: 4
+        type: string
+    required:
+    - login
+    - password
+    type: object
   reqresp.PostResponse:
     properties:
       description:
@@ -63,6 +78,26 @@ definitions:
     - description
     - shopID
     type: object
+  reqresp.RegisterUserRequest:
+    properties:
+      login:
+        example: ulogin
+        maxLength: 50
+        minLength: 4
+        type: string
+      password:
+        example: "12345678"
+        minLength: 4
+        type: string
+      username:
+        example: uname
+        maxLength: 50
+        type: string
+    required:
+    - login
+    - password
+    - username
+    type: object
   reqresp.ShopResponse:
     properties:
       description:
@@ -89,6 +124,52 @@ info:
   title: CraftPlace
   version: "1.0"
 paths:
+  /auth-user/login:
+    post:
+      consumes:
+      - application/json
+      description: Аутентифицирует пользователя и возвращает токен доступа
+      parameters:
+      - description: Учетные данные для входа
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/reqresp.LoginUserRequest'
+      responses:
+        "200":
+          description: Пользователь успешно аутентифицирован
+        "400":
+          description: Неверные входные параметры
+        "401":
+          description: Ошибка аутентификации
+      summary: Вход пользователя
+      tags:
+      - аутентификация
+  /auth-user/register:
+    post:
+      consumes:
+      - application/json
+      description: Регистрирует нового пользователя
+      parameters:
+      - description: Данные для регистрации
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/reqresp.RegisterUserRequest'
+      responses:
+        "200":
+          description: Пользователь зарегистрирован
+        "400":
+          description: Неверные входные параметры
+        "401":
+          description: Ошибка аутентификации
+        "409":
+          description: Попытка повторной регистрации
+      summary: Регистрация пользователя
+      tags:
+      - аутентификация
   /categories:
     get:
       consumes:
